Add Docker container for React frontend and update docker-compose for full stack integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,14 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build:
+      context: ./frontend  
+    container_name: react_frontend
+    ports:
+      - "3000:80"  
+    depends_on:
+      - django_app  
+
 volumes:
   pgdata:
-
